--- a/.gitignore
+++ b/.gitignore
@@ -379,4 +379,4 @@ P8/Data/*
 *cmake-build-release*
 
 P8/DataConverters/ShapeletHistogramConverter/checksum/**
-P8/Experiments/Output/**
+P8/Experiments/Results/**
