--- a/.gitignore
+++ b/.gitignore
@@ -367,11 +367,12 @@ P8Report/**/build
 
 *.pdf
 
-P8/formated/**
-P8/output/**
+P8/Formated/**
+P8/Output/**
 
 P8/Data/*
 !P8/Data/readme.md
+!P8/Formated/readme.md
 
 # pycharm / clion
 .idea
