--- a/P8/Experiments/Configs/Beef.ini
+++ b/P8/Experiments/Configs/Beef.ini
@@ -2,14 +2,14 @@
 UseConverter = ShapeletHistogramConverter
 SourceTrainData = ./Data/Beef/Beef_TRAIN.tsv
 SourceTestData = ./Data/Beef/Beef_TEST.tsv
-FormatedFolder = Formated/Beef/
+FormatedFolder = Formatted/Beef/
 TrainValSplit = 0
 TestClassesSplit = 5
 depth = 40
 maxWindowSize = 32
 
 [NETTRAINER]
-dataset_root = Formated/Beef/
+dataset_root = Formatted/Beef/
 classes_per_it_tr = 3
 num_query_tr = 1
 num_support_tr = 4
