--- a/P8/Experiments/Configs/CricketX.ini
+++ b/P8/Experiments/Configs/CricketX.ini
@@ -2,14 +2,14 @@
 UseConverter = ShapeletHistogramConverter
 SourceTrainData = ./Data/CricketX/CricketX_TRAIN.tsv
 SourceTestData = ./Data/CricketX/CricketX_TEST.tsv
-FormatedFolder = Formated/CricketX/
+FormatedFolder = Formatted/CricketX/
 TrainValSplit = 0
 TestClassesSplit = 5
 depth = 40
 maxWindowSize = 32
 
 [NETTRAINER]
-dataset_root = Formated/CricketX/
+dataset_root = Formatted/CricketX/
 classes_per_it_tr = 3
 num_query_tr = 1
 num_support_tr = 4
