--- a/P8/Experiments/Configs/SwedishLeaf.ini
+++ b/P8/Experiments/Configs/SwedishLeaf.ini
@@ -2,14 +2,14 @@
 UseConverter = ShapeletHistogramConverter
 SourceTrainData = ./Data/SwedishLeaf/SwedishLeaf_TRAIN.tsv
 SourceTestData = ./Data/SwedishLeaf/SwedishLeaf_TEST.tsv
-FormatedFolder = Formated/SwedishLeaf/
+FormatedFolder = Formatted/SwedishLeaf/
 TrainValSplit = 0
 TestClassesSplit = 5
 depth = 40
 maxWindowSize = 32
 
 [NETTRAINER]
-dataset_root = Formated/SwedishLeaf/
+dataset_root = Formatted/SwedishLeaf/
 classes_per_it_tr = 3
 num_query_tr = 2
 num_support_tr = 1
