Fixes python args

--- a/P8/Experiments/Configs/ElectricDevices.ini
+++ b/P8/Experiments/Configs/ElectricDevices.ini
@@ -5,7 +5,8 @@ SourceTestData = ./Data/ElectricDevices/ElectricDevices_TEST.tsv
 FormatedFolder = Formatted/ElectricDevices/
 TrainValSplit = 0
 TestClassesSplit = 5
-depth = 40
+featureCount = 256
+sampleSize = 3
 maxWindowSize = 32
 
 [NETTRAINER]
