--- a/P8/Experiments/Configs/Beef.ini
+++ b/P8/Experiments/Configs/Beef.ini
@@ -5,7 +5,8 @@ SourceTestData = ./Data/Beef/Beef_TEST.tsv
 FormatedFolder = Formatted/Beef/
 TrainValSplit = 0
 TestClassesSplit = 5
-depth = 40
+featureCount = 256
+sampleSize = 3
 maxWindowSize = 32
 
 [NETTRAINER]
