--- a/P8/Experiments/Configs/CricketX.ini
+++ b/P8/Experiments/Configs/CricketX.ini
@@ -5,7 +5,8 @@ SourceTestData = ./Data/CricketX/CricketX_TEST.tsv
 FormatedFolder = Formatted/CricketX/
 TrainValSplit = 0
 TestClassesSplit = 5
-depth = 40
+featureCount = 256
+sampleSize = 3
 maxWindowSize = 32
 
 [NETTRAINER]
