--- a/P8/Experiments/Configs/SwedishLeaf.ini
+++ b/P8/Experiments/Configs/SwedishLeaf.ini
@@ -5,7 +5,8 @@ SourceTestData = ./Data/SwedishLeaf/SwedishLeaf_TEST.tsv
 FormatedFolder = Formatted/SwedishLeaf/
 TrainValSplit = 0
 TestClassesSplit = 5
-depth = 40
+featureCount = 256
+sampleSize = 3
 maxWindowSize = 32
 
 [NETTRAINER]
