Updated the makefile to not compile the entire catch2 library, if its in release mode

--- a/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
+++ b/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
@@ -6,13 +6,16 @@ set(CMAKE_CXX_STANDARD 20)
 
 Include(FetchContent)
 
-FetchContent_Declare(
-        Catch2
-        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-        GIT_TAG        v3.0.1 # or a later release
-)
-FetchContent_MakeAvailable(Catch2)
-list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
+
+if (CMAKE_BUILD_TYPE EQUAL "DEBUG")
+    FetchContent_Declare(
+            Catch2
+            GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+            GIT_TAG        v3.0.1 # or a later release
+    )
+    FetchContent_MakeAvailable(Catch2)
+    list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
+endif (CMAKE_BUILD_TYPE EQUAL "DEBUG")
 
 FetchContent_Declare(
     cxxopts 
@@ -39,7 +42,8 @@ add_executable(FeatureExtraction main.cpp
         include/indicators/indicators.hpp)
 target_include_directories(FeatureExtraction PRIVATE include)
 
-
-include(CTest)
-include(Catch)
-include(test/CMakeLists.txt)
+if (CMAKE_BUILD_TYPE EQUAL "DEBUG")
+    include(CTest)
+    include(Catch)
+    include(test/CMakeLists.txt)
+endif (CMAKE_BUILD_TYPE EQUAL "DEBUG")
