--- a/P8/Experiments/Configs/Wine.ini
+++ b/P8/Experiments/Configs/Wine.ini
@@ -5,7 +5,8 @@ SourceTestData = ./Data/Wine/Wine_TEST.tsv
 FormatedFolder = Formatted/Wine/
 TrainValSplit = 0
 TestClassesSplit = 5
-depth = 40
+featureCount = 256
+sampleSize = 3
 maxWindowSize = 64
 
 [NETTRAINER]
