* Reduced feature count * Fixed the protonet trainer

--- a/P8/Experiments/Configs/SwedishLeaf.ini
+++ b/P8/Experiments/Configs/SwedishLeaf.ini
@@ -5,7 +5,7 @@ SourceTestData = ./Data/SwedishLeaf/SwedishLeaf_TEST.tsv
 FormatedFolder = Formatted/SwedishLeaf/
 TrainValSplit = 0
 TestClassesSplit = 5
-featureCount = 256
+featureCount = 128
 sampleSize = 3
 maxWindowSize = 64
 
@@ -20,4 +20,4 @@ num_support_test = 4
 train_epochs = 10
 load_val_set = False
 dataset_name = UCR
-trainer_name = NaiveKNN
+trainer_name = ProtoNetTrainer
