Adds random sample size

--- a/P8/Experiments/Configs/SwedishLeaf.ini
+++ b/P8/Experiments/Configs/SwedishLeaf.ini
@@ -6,7 +6,6 @@ FormatedFolder = Formatted/SwedishLeaf/
 TrainValSplit = 0
 TestClassesSplit = 5
 featureCount = 128
-sampleSize = 3
 maxWindowSize = 64
 
 [NETTRAINER]
@@ -20,4 +19,4 @@ num_support_test = 4
 train_epochs = 10
 load_val_set = False
 dataset_name = UCR
-trainer_name = ProtoNetTrainer
+trainer_name = NaiveKNN
