Small inclusive option, as well as changed the configs to use the protonet instead

--- a/P8/Experiments/Configs/Wine.ini
+++ b/P8/Experiments/Configs/Wine.ini
@@ -20,4 +20,4 @@ num_support_test = 1
 train_epochs = 10
 load_val_set = False
 dataset_name = UCR
-trainer_name = NaiveKNN
+trainer_name = ProtoNetTrainer
