Fixed a bug in the UCR dataset

--- a/P8/Experiments/Configs/Base.ini
+++ b/P8/Experiments/Configs/Base.ini
@@ -1,6 +1,7 @@
 [DATACONVERTER]
 UseConverter = ShapeletHistogramConverter
 TestClassesSplit = 5
+TrainValSplit = 0
 featureCount = 16
 maxWindowSize = 16
 
