Adds for python

--- a/P8/Experiments/Configs/Base.ini
+++ b/P8/Experiments/Configs/Base.ini
@@ -4,6 +4,7 @@ TestClassesSplit = 5
 TrainValSplit = 0
 featureCount = 16
 maxWindowSize = 16
+attributes = minDist
 
 [NETTRAINER]
 train_epochs = 10
