Fixed all comparison data

--- a/P8/Experiments/Configs/Base.ini
+++ b/P8/Experiments/Configs/Base.ini
@@ -2,7 +2,7 @@
 UseConverter = ShapeletHistogramConverter
 TestClassesSplit = 6
 TrainValSplit = 0
-featureCount = 128
+featureCount = 64
 maxWindowSize = 64
 
 [NETTRAINER]
@@ -10,3 +10,7 @@ train_epochs = 5
 load_val_set = False
 dataset_name = UCR
 trainer_name = ProtoNetTrainer
+num_query_tr = 1
+num_support_tr = 5
+num_query_test = 1
+num_support_test = 5
