--- a/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/test/CMakeLists.txt
+++ b/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/test/CMakeLists.txt
@@ -1,1 +1,2 @@
 include(${CMAKE_CURRENT_LIST_DIR}/window_generation/CMakeLists.txt)
+include(${CMAKE_CURRENT_LIST_DIR}/InformationGain/CMakeLists.txt)
