--- a/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
+++ b/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
@@ -1,20 +1,9 @@
-cmake_minimum_required(VERSION 3.22.1)
+cmake_minimum_required(VERSION 3.5)
 project(FeatureExtraction)
 
 set(CMAKE_CXX_STANDARD 20)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Release)
 Include(FetchContent)
-
-FetchContent_Declare(
-        Catch2
-        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-        GIT_TAG        v3.0.1 # or a later release
-)
-FetchContent_GetProperties(Catch2)
-if(NOT Catch2_POPULATED)
-    FetchContent_Populate(Catch2)
-    add_subdirectory(${catch2_SOURCE_DIR} ${catch2_BINARY_DIR})
-endif() 
 
 FetchContent_Declare(
     cxxopts 
@@ -33,5 +22,6 @@ add_executable(FeatureExtraction main.cpp include/cxxopts/cxxopts.hpp)
 target_include_directories(FeatureExtraction PRIVATE include src)
 
 include(CTest)
-include(Catch)
-include(test/CMakeLists.txt)
+
+enable_testing()
+add_subdirectory(test)
