--- a/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
+++ b/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
@@ -1,10 +1,11 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.13)
 project(FeatureExtraction)
 
 set(CMAKE_CXX_STANDARD 20)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Release)
-Include(FetchContent)
 
+# Fetch the cxxopts library
+Include(FetchContent)
 FetchContent_Declare(
     cxxopts 
     URL https://raw.githubusercontent.com/jarro2783/cxxopts/v3.1.1/include/cxxopts.hpp
@@ -13,10 +14,12 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(cxxopts)
 
+# Setup src library
 add_subdirectory(src)
 
-include(CTest)
+# Setup tests with catch2
 add_subdirectory(test)
 
+# Make final executable
 add_executable(FeatureExtraction main.cpp include/cxxopts/cxxopts.hpp)
 target_include_directories(FeatureExtraction PRIVATE include src)
