Small cmake fix, so that vs is happy

--- a/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
+++ b/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
@@ -18,6 +18,7 @@ FetchContent_MakeAvailable(cxxopts)
 add_subdirectory(src)
 
 # Setup tests with catch2
+include(CTest)
 add_subdirectory(test)
 
 # Make final executable
