--- a/P8/Experiments/Configs/BaseConfigs/6ShotKNN.ini
+++ b/P8/Experiments/Configs/BaseConfigs/6ShotKNN.ini
@@ -1,10 +1,11 @@
 [DATACONVERTER]
 UseConverter = ShapeletHistogramConverter
-TestClassesSplit = 6
+TestClassesSplit = 2
 TrainValSplit = 0
-featureCount = 64
+featureCount = 128
 maxWindowSize = 64
 attributes = minDist
+smoothingDegree = 1
 
 [NETTRAINER]
 train_epochs = 5
