--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
@@ -6,10 +6,14 @@ ExperimentRounds = 1
 ExperimentName = Ours (6 shot, ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonet.ini
 
-GenerateGraphs = False
+FormatDataset = False
+RunTrain = False
+RunTest = False
+
+GenerateGraphs = True
 GenerateAccuracyGraphs = False
 GenerateExperimentGraph = False
-GenerateClassGraphs = False
+GenerateClassGraphs = True
 GenerateShapeletGraphs = False
 GenerateSourceGraphs = False
 
