* Refactoring * Fixed some titles for larger class/shapelet count * Added a "fast" run option config

--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
@@ -4,16 +4,12 @@ ExperimentResultsDir = Experiments/Results
 ExperimentsToRun = ArrowHead
 ExperimentRounds = 1
 ExperimentName = Ours (6 shot, ProtoNet)
-BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonet.ini
+BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
 
-FormatDataset = False
-RunTrain = False
-RunTest = False
-
-GenerateGraphs = True
+GenerateGraphs = False
 GenerateAccuracyGraphs = False
 GenerateExperimentGraph = False
-GenerateClassGraphs = True
+GenerateClassGraphs = False
 GenerateShapeletGraphs = False
 GenerateSourceGraphs = False
 
