Finished the graph generation system

--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
@@ -8,6 +8,7 @@ BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonet.ini
 
 GenerateGraphs = False
 GenerateAccuracyGraphs = False
+GenerateClassAccuracyGraph = False
 GenerateExperimentGraph = False
 GenerateClassGraphs = False
 GenerateShapeletGraphs = False
