--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFull.ini
@@ -8,6 +8,7 @@ BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonet.ini
 
 GenerateGraphs = True
 GenerateAccuracyGraphs = True
+GenerateClassAccuracyGraph = True
 GenerateExperimentGraph = True
 GenerateClassGraphs = True
 GenerateShapeletGraphs = True
