--- a/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
+++ b/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/CMakeLists.txt
@@ -27,9 +27,9 @@ FetchContent_MakeAvailable(cxxopts)
 add_library(Sources INTERFACE
         src/IO/FileHanding.h src/misc/Constants.h src/core/WindowGeneration.h src/utilities/SeriesUtils.h src/core/InformationGain.h src/core/feature_finding/FeatureFinding.h src/IO/Logger.h
         src/IO/ArgumentParser.h src/utilities/FeatureUtils.h src/utilities/ClassCountUtils.h src/core/attributes/Attribute.h src/types/Feature.h src/core/attributes/Frequency.h src/core/attributes/MinDist.h src/core/attributes/AttributeBuilder.h src/core/feature_finding/Evaluation.h
-        src/core/attributes/MaxDist.h src/core/attributes/OccPos.h src/core/DataAugmentation.h)
+        src/core/attributes/MaxDist.h src/core/attributes/OccPos.h src/Preprocessing/DataAugmentation.h)
 
-add_executable(FeatureExtraction main.cpp include/cxxopts/cxxopts.hpp src/core/DataChoosing.h)
+add_executable(FeatureExtraction main.cpp include/cxxopts/cxxopts.hpp src/Preprocessing/DataPurge.h src/Preprocessing/DataSplit.h)
 target_include_directories(FeatureExtraction PRIVATE include src)
 
 include(CTest)
