Show how many of each class is purged

--- a/P8/Experiments/Configs/BaseConfigs/6ShotProtonet.ini
+++ b/P8/Experiments/Configs/BaseConfigs/6ShotProtonet.ini
@@ -2,9 +2,10 @@
 UseConverter = ShapeletHistogramConverter
 TestClassesSplit = 6
 TrainValSplit = 0
-featureCount = 256
-maxWindowSize = 64
+featureCount = 128
+maxWindowSize = 96
 attributes = minDist
+smoothingDegree = 1
 
 [NETTRAINER]
 train_epochs = 5
