--- a/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
@@ -1,12 +1,12 @@
 [SUITEOPTIONS]
 ExperimentConfigDir = Experiments/Configs
 ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = ArrowHead,BME,CBF,Chinatown,ECG200,GunPoint,GunPointAgeSpan,GunPointOldVersusYoung,ItalyPowerDemand,MoteStrain,Plane,SonyAIBORobotSurface1,SonyAIBORobotSurface2,SyntheticControl,ToeSegmentation1,TwoLeadECG,UMD,Wine
-ExperimentRounds = 3
+ExperimentsToRun = Adiac,Beef,BeetleFly,BirdChicken,ChlorineConcentration,Coffee,CricketX,CricketY,CricketZ,DistalPhalanxOutlineAgeGroup,DistalPhalanxOutlineCorrect,DistalPhalanxTW,ECG200,ECG5000,ECGFiveDays,ElectricDevices,FaceAll,FaceFour,FordA,FordB,InsectWingbeatSound,Meat,MedicalImages,MiddlePhalanxOutlineAgeGroup,MiddlePhalanxOutlineCorrect,MiddlePhalanxTW,PhalangesOutlinesCorrect,ProximalPhalanxOutlineAgeGroup,ProximalPhalanxOutlineCorrect,ProximalPhalanxTW,Strawberry,SweedishLeaf,SyntheticControl,TwoPatterns,UWaveGestureLibraryX,UWaveGestureLibraryY,UWaveGestureLibraryZ,Wafer,Wine,Yoga
+ExperimentRounds = 1
 ExperimentName = Ours (5 shot, ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/5ShotProtonet.ini
 
-GenerateGraphs = True
+GenerateGraphs = False
 GenerateAccuracyGraphs = True
 GenerateClassAccuracyGraph = True
 GenerateExperimentGraph = True
@@ -16,9 +16,9 @@ GenerateSourceGraphs = True
 
 ComparisonData = ../ComparisonData/5shot.csv
 
-DebugMode = False
+DebugMode = True
 
-ZipDataset = True
-CopyConfigs = True
+ZipDataset = False
+CopyConfigs = False
 
 ForceRemakeDataset = True
