Updated full config

--- a/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
@@ -2,11 +2,11 @@
 ExperimentConfigDir = Experiments/Configs
 ExperimentResultsDir = Experiments/Results
 ExperimentsToRun = Adiac,Beef,BeetleFly,BirdChicken,ChlorineConcentration,Coffee,CricketX,CricketY,CricketZ,DistalPhalanxOutlineAgeGroup,DistalPhalanxOutlineCorrect,DistalPhalanxTW,ECG200,ECG5000,ECGFiveDays,ElectricDevices,FaceAll,FaceFour,FordA,FordB,InsectWingbeatSound,Meat,MedicalImages,MiddlePhalanxOutlineAgeGroup,MiddlePhalanxOutlineCorrect,MiddlePhalanxTW,PhalangesOutlinesCorrect,ProximalPhalanxOutlineAgeGroup,ProximalPhalanxOutlineCorrect,ProximalPhalanxTW,Strawberry,SweedishLeaf,SyntheticControl,TwoPatterns,UWaveGestureLibraryX,UWaveGestureLibraryY,UWaveGestureLibraryZ,Wafer,Wine,Yoga
-ExperimentRounds = 1
+ExperimentRounds = 3
 ExperimentName = Ours (5 shot, ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/5ShotProtonet.ini
 
-GenerateGraphs = False
+GenerateGraphs = True
 GenerateAccuracyGraphs = True
 GenerateClassAccuracyGraph = True
 GenerateExperimentGraph = True
@@ -18,7 +18,7 @@ ComparisonData = ../ComparisonData/5shot.csv
 
 DebugMode = True
 
-ZipDataset = False
-CopyConfigs = False
+ZipDataset = True
+CopyConfigs = True
 
 ForceRemakeDataset = True
