Updated full config

--- a/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
@@ -16,7 +16,7 @@ GenerateSourceGraphs = True
 
 ComparisonData = ../ComparisonData/5shot.csv
 
-DebugMode = True
+DebugMode = False
 
 ZipDataset = True
 CopyConfigs = True
