--- a/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/src/CMakeLists.txt
+++ b/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(Sources INTERFACE
         IO/FileHanding.h misc/Constants.h core/WindowGeneration.h utilities/SeriesUtils.h core/InformationGain.h core/feature_finding/FeatureFinding.h IO/Logger.h
         IO/ArgumentParser.h utilities/FeatureUtils.h utilities/ClassCountUtils.h core/attributes/Attribute.h types/Feature.h core/attributes/Frequency.h core/attributes/MinDist.h core/attributes/AttributeBuilder.h core/feature_finding/Evaluation.h
-        core/attributes/MaxDist.h core/attributes/OccPos.h core/DataAugmentation.h)
+        core/attributes/MaxDist.h core/attributes/OccPos.h preprocessing/DataAugmentation.h)
