--- a/P8/Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
@@ -1,9 +1,10 @@
 [DATACONVERTER]
 UseConverter = ShapeletHistogramConverter
 TestClassesSplit = 6
-featureCount = 6
-maxWindowSize = 64
+featureCount = 32
+maxWindowSize = 16
 attributes = minDist
+smoothingDegree = 1
 
 [NETTRAINER]
 train_epochs = 1
