--- a/P8/Experiments/Configs/BaseConfigs/8ShotProtonet.ini
+++ b/P8/Experiments/Configs/BaseConfigs/8ShotProtonet.ini
@@ -4,6 +4,7 @@ TestClassesSplit = 8
 featureCount = 64
 maxWindowSize = 64
 attributes = minDist
+smoothingDegree = 1
 
 [NETTRAINER]
 train_epochs = 5
