--- a/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
@@ -1,7 +1,7 @@
 [SUITEOPTIONS]
 ExperimentConfigDir = Experiments/Configs
 ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = Adiac,Beef,BeetleFly,BirdChicken,ChlorineConcentration,Coffee,CricketX,CricketY,CricketZ,DistalPhalanxOutlineAgeGroup,DistalPhalanxOutlineCorrect,DistalPhalanxTW,ECG200,ECG5000,ECGFiveDays,ElectricDevices,FaceAll,FaceFour,FordA,FordB,InsectWingbeatSound,Meat,MedicalImages,MiddlePhalanxOutlineAgeGroup,MiddlePhalanxOutlineCorrect,MiddlePhalanxTW,PhalangesOutlinesCorrect,ProximalPhalanxOutlineAgeGroup,ProximalPhalanxOutlineCorrect,ProximalPhalanxTW,Strawberry,SweedishLeaf,SyntheticControl,TwoPatterns,UWaveGestureLibraryX,UWaveGestureLibraryY,UWaveGestureLibraryZ,Wafer,Wine,Yoga
+ExperimentsToRun = Adiac,Beef,BeetleFly,BirdChicken,ChlorineConcentration,Coffee,CricketX,CricketY,CricketZ,DistalPhalanxOutlineAgeGroup,DistalPhalanxOutlineCorrect,DistalPhalanxTW,ECG200,ECG5000,ECGFiveDays,ElectricDevices,FaceAll,FaceFour,FordA,FordB,InsectWingbeatSound,Meat,MedicalImages,MiddlePhalanxOutlineAgeGroup,MiddlePhalanxOutlineCorrect,MiddlePhalanxTW,PhalangesOutlinesCorrect,ProximalPhalanxOutlineAgeGroup,ProximalPhalanxOutlineCorrect,ProximalPhalanxTW,Strawberry,SwedishLeaf,SyntheticControl,TwoPatterns,UWaveGestureLibraryX,UWaveGestureLibraryY,UWaveGestureLibraryZ,Wafer,Wine,Yoga
 ExperimentRounds = 3
 ExperimentName = Ours (5 shot, ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/5ShotProtonet.ini
