Updated project file and configs

--- a/P8/Experiments/SuiteConfigs/6ShotKNNFull.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotKNNFull.ini
@@ -7,11 +7,12 @@ ExperimentName = Ours (6 shot, KNN)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotKNN.ini
 
 GenerateGraphs = True
-GenerateAccuracyGraphs = False
-GenerateExperimentGraph = False
-GenerateClassGraphs = False
-GenerateShapeletGraphs = False
-GenerateSourceGraphs = False
+GenerateAccuracyGraphs = True
+GenerateClassAccuracyGraph = True
+GenerateExperimentGraph = True
+GenerateClassGraphs = True
+GenerateShapeletGraphs = True
+GenerateSourceGraphs = True
 
 ComparisonData = ../ComparisonData/6shot.csv
 
