--- a/P8/Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
@@ -5,6 +5,7 @@ featureCount = 32
 maxWindowSize = 16
 attributes = minDist
 smoothingDegree = 1
+purgeOddData = False
 
 [NETTRAINER]
 train_epochs = 1
