Fixed the graph generation of the new `source` data structure

--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
@@ -6,13 +6,14 @@ ExperimentRounds = 1
 ExperimentName = Ours (6 shot, ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
 
-GenerateGraphs = False
-GenerateAccuracyGraphs = False
+GenerateGraphs = True
+GenerateAccuracyGraphs = True
 GenerateClassAccuracyGraph = False
 GenerateExperimentGraph = False
 GenerateClassGraphs = False
 GenerateShapeletGraphs = False
-GenerateSourceGraphs = False
+GenerateOriginalSourceGraph = True
+GenerateAugmentedSourceGraph = True
 
 ComparisonData = ../ComparisonData/6shot.csv
 
