Added graph generation for the purge data

--- a/P8/Experiments/SuiteConfigs/5ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotProtonetFast.ini
@@ -12,7 +12,10 @@ GenerateClassAccuracyGraph = False
 GenerateExperimentGraph = False
 GenerateClassGraphs = False
 GenerateShapeletGraphs = False
-GenerateSourceGraphs = False
+GenerateOriginalSourceGraph = False
+GenerateAugmentedSourceGraph = False
+GenerateCandidatesGraph = False
+GenerateRejectsGraph = False
 
 ComparisonData = ../ComparisonData/5shot.csv
 
