--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
@@ -6,14 +6,16 @@ ExperimentRounds = 1
 ExperimentName = Ours (6 shot, ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
 
-GenerateGraphs = True
-GenerateAccuracyGraphs = True
+GenerateGraphs = False
+GenerateAccuracyGraphs = False
 GenerateClassAccuracyGraph = False
 GenerateExperimentGraph = False
 GenerateClassGraphs = False
 GenerateShapeletGraphs = False
-GenerateOriginalSourceGraph = True
-GenerateAugmentedSourceGraph = True
+GenerateOriginalSourceGraph = False
+GenerateAugmentedSourceGraph = False
+GenerateCandidatesGraph = False
+GenerateRejectsGraph = False
 
 ComparisonData = ../ComparisonData/6shot.csv
 
