--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFull.ini
@@ -12,7 +12,10 @@ GenerateClassAccuracyGraph = True
 GenerateExperimentGraph = True
 GenerateClassGraphs = True
 GenerateShapeletGraphs = True
-GenerateSourceGraphs = True
+GenerateOriginalSourceGraph = True
+GenerateAugmentedSourceGraph = True
+GenerateCandidatesGraph = True
+GenerateRejectsGraph = True
 
 ComparisonData = ../ComparisonData/6shot.csv
 
