Fixed a small bug where the `ExperimentName` value in the `SuiteConfigs` caused the `comparable.csv` file to be incorrectly generated (the string had a , in it)

--- a/P8/Experiments/SuiteConfigs/5ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotProtonetFast.ini
@@ -3,7 +3,7 @@ ExperimentConfigDir = Experiments/Configs
 ExperimentResultsDir = Experiments/Results
 ExperimentsToRun = Beef
 ExperimentRounds = 1
-ExperimentName = Ours (5 shot, ProtoNet)
+ExperimentName = Ours (5 shot - ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/5ShotProtonet.ini
 
 GenerateGraphs = False
