--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
@@ -1,9 +1,9 @@
 [SUITEOPTIONS]
 ExperimentConfigDir = Experiments/Configs
 ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = ArrowHead
+ExperimentsToRun = ArrowHead,BME
 ExperimentRounds = 1
-ExperimentName = Ours (6 shot, ProtoNet)
+ExperimentName = Ours (6 shot - ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
 
 GenerateGraphs = False
