--- a/P8/Experiments/SuiteConfigs/8ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/8ShotProtonetFull.ini
@@ -3,7 +3,7 @@ ExperimentConfigDir = Experiments/Configs
 ExperimentResultsDir = Experiments/Results
 ExperimentsToRun = ArrowHead,BME,CBF,Chinatown,ECG200,GunPoint,GunPointAgeSpan,GunPointOldVersusYoung,ItalyPowerDemand,MoteStrain,Plane,SonyAIBORobotSurface1,SonyAIBORobotSurface2,SyntheticControl,ToeSegmentation1,TwoLeadECG,UMD,Wine
 ExperimentRounds = 3
-ExperimentName = Ours (8 shot, ProtoNet)
+ExperimentName = Ours (8 shot - ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/8ShotProtonet.ini
 
 GenerateGraphs = True
