Added a plot, that combines all the accuracies into a boxplot

--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
@@ -1,13 +1,13 @@
 [SUITEOPTIONS]
 ExperimentConfigDir = Experiments/Configs
 ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = ArrowHead,BME
+ExperimentsToRun = ArrowHead
 ExperimentRounds = 1
 ExperimentName = Ours (6 shot - ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
 
-GenerateGraphs = False
-GenerateAccuracyGraphs = False
+GenerateGraphs = True
+GenerateAccuracyGraphs = True
 GenerateClassAccuracyGraph = False
 GenerateExperimentGraph = False
 GenerateClassGraphs = False
