Reverted config file

--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
@@ -6,8 +6,8 @@ ExperimentRounds = 1
 ExperimentName = Ours (6 shot - ProtoNet)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
 
-GenerateGraphs = True
-GenerateAccuracyGraphs = True
+GenerateGraphs = False
+GenerateAccuracyGraphs = False
 GenerateClassAccuracyGraph = False
 GenerateExperimentGraph = False
 GenerateClassGraphs = False
