--- a/P8/Experiments/Configs/BaseConfigs/5ShotProtonetFull.ini
+++ b/P8/Experiments/Configs/BaseConfigs/5ShotProtonetFull.ini
@@ -5,9 +5,11 @@ featureCount = 64
 maxWindowSize = 64
 attributes = minDist
 smoothingDegree = 1
+purgeOddData = False
 
 [NETTRAINER]
 train_epochs = 5
+test_epochs = 5
 dataset_name = UCR
 trainer_name = ProtoNetTrainer
 num_query_tr = 1
