--- a/P8/Experiments/Configs/BaseConfigs/6ShotKNNFast.ini
+++ b/P8/Experiments/Configs/BaseConfigs/6ShotKNNFast.ini
@@ -1,13 +1,15 @@
 [DATACONVERTER]
 UseConverter = ShapeletHistogramConverter
 TestClassesSplit = 6
-featureCount = 64
-maxWindowSize = 64
+featureCount = 32
+maxWindowSize = 16
 attributes = minDist
 smoothingDegree = 1
+purgeOddData = False
 
 [NETTRAINER]
-train_epochs = 5
+train_epochs = 1
+test_epochs = 1
 dataset_name = UCR
 trainer_name = NaiveKNN
 num_query_tr = 1
