--- a/P8/Experiments/SuiteConfigs/5ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotProtonetFast.ini
@@ -1,27 +1,5 @@
 [SUITEOPTIONS]
-ExperimentConfigDir = Experiments/Configs
-ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = Beef
-ExperimentRounds = 1
-ExperimentName = Ours (5 shot - ProtoNet)
-BaseConfig = Experiments/Configs/BaseConfigs/5ShotProtonet.ini
+BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/5ShotFast.ini
 
-GenerateGraphs = False
-GenerateAccuracyGraphs = False
-GenerateClassAccuracyGraph = False
-GenerateExperimentGraph = False
-GenerateClassGraphs = False
-GenerateShapeletGraphs = False
-GenerateOriginalSourceGraph = False
-GenerateAugmentedSourceGraph = False
-GenerateCandidatesGraph = False
-GenerateRejectsGraph = False
-
-ComparisonData = ../ComparisonData/5shot.csv
-
-DebugMode = True
-
-ZipDataset = False
-CopyConfigs = False
-
-ForceRemakeDataset = False
+ExperimentName = Ours (5 shot - ProtoNet - Fast)
+BaseConfig = Experiments/Configs/BaseConfigs/5ShotProtonetFast.ini
