--- a/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
@@ -1,27 +1,5 @@
 [SUITEOPTIONS]
-ExperimentConfigDir = Experiments/Configs
-ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = Adiac,Beef,BeetleFly,BirdChicken,ChlorineConcentration,Coffee,CricketX,CricketY,CricketZ,DistalPhalanxOutlineAgeGroup,DistalPhalanxOutlineCorrect,DistalPhalanxTW,ECG200,ECG5000,ECGFiveDays,ElectricDevices,FaceAll,FaceFour,FordA,FordB,InsectWingbeatSound,Meat,MedicalImages,MiddlePhalanxOutlineAgeGroup,MiddlePhalanxOutlineCorrect,MiddlePhalanxTW,PhalangesOutlinesCorrect,ProximalPhalanxOutlineAgeGroup,ProximalPhalanxOutlineCorrect,ProximalPhalanxTW,Strawberry,SwedishLeaf,SyntheticControl,TwoPatterns,UWaveGestureLibraryX,UWaveGestureLibraryY,UWaveGestureLibraryZ,Wafer,Wine,Yoga
-ExperimentRounds = 3
-ExperimentName = Ours (5 shot - ProtoNet)
-BaseConfig = Experiments/Configs/BaseConfigs/5ShotProtonet.ini
+BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/5ShotFull.ini
 
-GenerateGraphs = True
-GenerateAccuracyGraphs = True
-GenerateClassAccuracyGraph = True
-GenerateExperimentGraph = True
-GenerateClassGraphs = True
-GenerateShapeletGraphs = True
-GenerateOriginalSourceGraph = True
-GenerateAugmentedSourceGraph = True
-GenerateCandidatesGraph = True
-GenerateRejectsGraph = True
-
-ComparisonData = ../ComparisonData/5shot.csv
-
-DebugMode = False
-
-ZipDataset = True
-CopyConfigs = True
-
-ForceRemakeDataset = True
+ExperimentName = Ours (5 shot - ProtoNet - Full)
+BaseConfig = Experiments/Configs/BaseConfigs/5ShotProtonetFull.ini
