--- a/P8/Experiments/SuiteConfigs/8ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/8ShotProtonetFull.ini
@@ -1,24 +1,5 @@
 [SUITEOPTIONS]
-ExperimentConfigDir = Experiments/Configs
-ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = ArrowHead,BME,CBF,Chinatown,ECG200,GunPoint,GunPointAgeSpan,GunPointOldVersusYoung,ItalyPowerDemand,MoteStrain,Plane,SonyAIBORobotSurface1,SonyAIBORobotSurface2,SyntheticControl,ToeSegmentation1,TwoLeadECG,UMD,Wine
-ExperimentRounds = 3
-ExperimentName = Ours (8 shot - ProtoNet)
-BaseConfig = Experiments/Configs/BaseConfigs/8ShotProtonet.ini
+BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/8ShotFull.ini
 
-GenerateGraphs = True
-GenerateAccuracyGraphs = True
-GenerateClassAccuracyGraph = True
-GenerateExperimentGraph = True
-GenerateClassGraphs = True
-GenerateShapeletGraphs = True
-GenerateSourceGraphs = True
-
-ComparisonData = ../ComparisonData/8shot.csv
-
-DebugMode = False
-
-ZipDataset = True
-CopyConfigs = True
-
-ForceRemakeDataset = True
+ExperimentName = Ours (8 shot - ProtoNet - Full)
+BaseConfig = Experiments/Configs/BaseConfigs/8ShotProtonetFull.ini
