--- a/P8/Experiments/SuiteConfigs/BaseConfigs/6ShotFast.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/6ShotFast.ini
@@ -1,10 +1,11 @@
 [SUITEOPTIONS]
+BaseSuiteConfig = None
+
 ExperimentConfigDir = Experiments/Configs
 ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = ArrowHead,BME,CBF,Chinatown,ECG200,GunPoint,GunPointAgeSpan,GunPointOldVersusYoung,ItalyPowerDemand,MoteStrain,Plane,SonyAIBORobotSurface1,SonyAIBORobotSurface2,SyntheticControl,ToeSegmentation1,TwoLeadECG,UMD,Wine
-ExperimentRounds = 3
-ExperimentName = Ours (6 shot - KNN)
-BaseConfig = Experiments/Configs/BaseConfigs/6ShotKNN.ini
+ExperimentsToRun = ArrowHead
+ExperimentRounds = 1
+BaseConfig = None
 
 GenerateGraphs = True
 GenerateAccuracyGraphs = True
