--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFast.ini
@@ -1,27 +1,5 @@
 [SUITEOPTIONS]
-ExperimentConfigDir = Experiments/Configs
-ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = ArrowHead
-ExperimentRounds = 1
-ExperimentName = Ours (6 shot - ProtoNet)
+BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/6ShotFast.ini
+
+ExperimentName = Ours (6 shot - ProtoNet - Fast)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
-
-GenerateGraphs = False
-GenerateAccuracyGraphs = False
-GenerateClassAccuracyGraph = False
-GenerateExperimentGraph = False
-GenerateClassGraphs = False
-GenerateShapeletGraphs = False
-GenerateOriginalSourceGraph = False
-GenerateAugmentedSourceGraph = False
-GenerateCandidatesGraph = False
-GenerateRejectsGraph = False
-
-ComparisonData = ../ComparisonData/6shot.csv
-
-DebugMode = True
-
-ZipDataset = False
-CopyConfigs = False
-
-ForceRemakeDataset = False
