Fixed base configs

--- a/P8/Experiments/SuiteConfigs/BaseConfigs/5ShotFull.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/5ShotFull.ini
@@ -15,8 +15,8 @@ GenerateClassGraphs = True
 GenerateShapeletGraphs = True
 GenerateOriginalSourceGraph = True
 GenerateAugmentedSourceGraph = True
-GenerateCandidatesGraph = True
-GenerateRejectsGraph = True
+GenerateCandidatesGraph = False
+GenerateRejectsGraph = False
 
 ComparisonData = ../ComparisonData/5shot.csv
 
