--- a/P8/Experiments/SuiteConfigs/BaseConfigs/8ShotFast.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/8ShotFast.ini
@@ -7,22 +7,22 @@ ExperimentsToRun = ArrowHead
 ExperimentRounds = 1
 BaseConfig = None
 
-GenerateGraphs = True
-GenerateAccuracyGraphs = True
-GenerateClassAccuracyGraph = True
-GenerateExperimentGraph = True
-GenerateClassGraphs = True
-GenerateShapeletGraphs = True
-GenerateOriginalSourceGraph = True
-GenerateAugmentedSourceGraph = True
-GenerateCandidatesGraph = True
-GenerateRejectsGraph = True
+GenerateGraphs = False
+GenerateAccuracyGraphs = False
+GenerateClassAccuracyGraph = False
+GenerateExperimentGraph = False
+GenerateClassGraphs = False
+GenerateShapeletGraphs = False
+GenerateOriginalSourceGraph = False
+GenerateAugmentedSourceGraph = False
+GenerateCandidatesGraph = False
+GenerateRejectsGraph = False
 
 ComparisonData = ../ComparisonData/8shot.csv
 
-DebugMode = False
+DebugMode = True
 
-ZipDataset = True
-CopyConfigs = True
+ZipDataset = False
+CopyConfigs = False
 
-ForceRemakeDataset = True
+ForceRemakeDataset = False
