Refactoring of configs by adding a recursive include style

--- a/P8/Experiments/SuiteConfigs/5ShotKNNFast.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotKNNFast.ini
@@ -1,5 +1,6 @@
-[SUITEOPTIONS]
-BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/5ShotFast.ini
+[INCLUDE]
+Include = Experiments/SuiteConfigs/BaseConfigs/5ShotFast.ini
 
+[SUITEOPTIONS]
 ExperimentName = Ours (5 shot - KNN - Fast)
 BaseConfig = Experiments/Configs/BaseConfigs/5ShotKNNFast.ini
