--- a/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/5ShotProtonetFull.ini
@@ -1,5 +1,6 @@
-[SUITEOPTIONS]
-BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/5ShotFull.ini
+[INCLUDE]
+Include = Experiments/SuiteConfigs/BaseConfigs/5ShotFull.ini
 
+[SUITEOPTIONS]
 ExperimentName = Ours (5 shot - ProtoNet - Full)
 BaseConfig = Experiments/Configs/BaseConfigs/5ShotProtonetFull.ini
