--- a/P8/Experiments/SuiteConfigs/8ShotProtonetFast.ini
+++ b/P8/Experiments/SuiteConfigs/8ShotProtonetFast.ini
@@ -1,5 +1,6 @@
-[SUITEOPTIONS]
-BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/8ShotFast.ini
+[INCLUDE]
+Include = Experiments/SuiteConfigs/BaseConfigs/8ShotFast.ini
 
+[SUITEOPTIONS]
 ExperimentName = Ours (8 shot - ProtoNet - Fast)
 BaseConfig = Experiments/Configs/BaseConfigs/8ShotProtonetFast.ini
