--- a/P8/Experiments/SuiteConfigs/6ShotKNNFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotKNNFast.ini
@@ -1,5 +1,6 @@
-[SUITEOPTIONS]
-BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/6ShotFast.ini
+[INCLUDE]
+Include = Experiments/SuiteConfigs/BaseConfigs/6ShotFast.ini
 
+[SUITEOPTIONS]
 ExperimentName = Ours (6 shot - KNN - Fast)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotKNNFast.ini
