--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFull.ini
@@ -1,5 +1,6 @@
-[SUITEOPTIONS]
-BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/6ShotFull.ini
+[INCLUDE]
+Include = Experiments/SuiteConfigs/BaseConfigs/6ShotFull.ini
 
+[SUITEOPTIONS]
 ExperimentName = Ours (6 shot - ProtoNet - Full)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFull.ini
