--- a/P8/Experiments/SuiteConfigs/8ShotKNNFull.ini
+++ b/P8/Experiments/SuiteConfigs/8ShotKNNFull.ini
@@ -1,5 +1,6 @@
-[SUITEOPTIONS]
-BaseSuiteConfig = Experiments/SuiteConfigs/BaseConfigs/8ShotFull.ini
+[INCLUDE]
+Include = Experiments/SuiteConfigs/BaseConfigs/8ShotFull.ini
 
+[SUITEOPTIONS]
 ExperimentName = Ours (8 shot - KNN - Full)
 BaseConfig = Experiments/Configs/BaseConfigs/8ShotKNNFull.ini
