Further config refactor

--- a/P8/Experiments/SuiteConfigs/BaseConfigs/5ShotFast.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/5ShotFast.ini
@@ -1,26 +1,7 @@
-[SUITEOPTIONS]
-ExperimentConfigDir = Experiments/Configs
-ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = Beef
-ExperimentRounds = 1
-BaseConfig = None
+[INCLUDE]
+Include = Experiments/SuiteConfigs/BaseConfigs/BaseFast.ini
 
-GenerateGraphs = False
-GenerateAccuracyGraphs = False
-GenerateClassAccuracyGraph = False
-GenerateExperimentGraph = False
-GenerateClassGraphs = False
-GenerateShapeletGraphs = False
-GenerateOriginalSourceGraph = False
-GenerateAugmentedSourceGraph = False
-GenerateCandidatesGraph = False
-GenerateRejectsGraph = False
+[SUITEOPTIONS]
+ExperimentsToRun = Beef
 
 ComparisonData = ../ComparisonData/5shot.csv
-
-DebugMode = True
-
-ZipDataset = False
-CopyConfigs = False
-
-ForceRemakeDataset = False
