--- a/P8/Experiments/SuiteConfigs/BaseConfigs/5ShotFull.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/5ShotFull.ini
@@ -1,26 +1,7 @@
-[SUITEOPTIONS]
-ExperimentConfigDir = Experiments/Configs
-ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = Adiac,Beef,BeetleFly,BirdChicken,ChlorineConcentration,Coffee,CricketX,CricketY,CricketZ,DistalPhalanxOutlineAgeGroup,DistalPhalanxOutlineCorrect,DistalPhalanxTW,ECG200,ECG5000,ECGFiveDays,ElectricDevices,FaceAll,FaceFour,FordA,FordB,InsectWingbeatSound,Meat,MedicalImages,MiddlePhalanxOutlineAgeGroup,MiddlePhalanxOutlineCorrect,MiddlePhalanxTW,PhalangesOutlinesCorrect,ProximalPhalanxOutlineAgeGroup,ProximalPhalanxOutlineCorrect,ProximalPhalanxTW,Strawberry,SwedishLeaf,SyntheticControl,TwoPatterns,UWaveGestureLibraryX,UWaveGestureLibraryY,UWaveGestureLibraryZ,Wafer,Wine,Yoga
-ExperimentRounds = 3
-BaseConfig = None
+[INCLUDE]
+Include = Experiments/SuiteConfigs/BaseConfigs/BaseFull.ini
 
-GenerateGraphs = True
-GenerateAccuracyGraphs = True
-GenerateClassAccuracyGraph = True
-GenerateExperimentGraph = True
-GenerateClassGraphs = True
-GenerateShapeletGraphs = True
-GenerateOriginalSourceGraph = True
-GenerateAugmentedSourceGraph = True
-GenerateCandidatesGraph = False
-GenerateRejectsGraph = False
+[SUITEOPTIONS]
+ExperimentsToRun = Adiac,Beef,BeetleFly,BirdChicken,ChlorineConcentration,Coffee,CricketX,CricketY,CricketZ,DistalPhalanxOutlineAgeGroup,DistalPhalanxOutlineCorrect,DistalPhalanxTW,ECG200,ECG5000,ECGFiveDays,ElectricDevices,FaceAll,FaceFour,FordA,FordB,InsectWingbeatSound,Meat,MedicalImages,MiddlePhalanxOutlineAgeGroup,MiddlePhalanxOutlineCorrect,MiddlePhalanxTW,PhalangesOutlinesCorrect,ProximalPhalanxOutlineAgeGroup,ProximalPhalanxOutlineCorrect,ProximalPhalanxTW,Strawberry,SwedishLeaf,SyntheticControl,TwoPatterns,UWaveGestureLibraryX,UWaveGestureLibraryY,UWaveGestureLibraryZ,Wafer,Wine,Yoga
 
 ComparisonData = ../ComparisonData/5shot.csv
-
-DebugMode = False
-
-ZipDataset = True
-CopyConfigs = True
-
-ForceRemakeDataset = True
