--- a/P8/Experiments/SuiteConfigs/BaseConfigs/6ShotFull.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/6ShotFull.ini
@@ -1,26 +1,7 @@
-[SUITEOPTIONS]
-ExperimentConfigDir = Experiments/Configs
-ExperimentResultsDir = Experiments/Results
-ExperimentsToRun = ArrowHead,BME,CBF,Chinatown,ECG200,GunPoint,GunPointAgeSpan,GunPointOldVersusYoung,ItalyPowerDemand,MoteStrain,Plane,SonyAIBORobotSurface1,SonyAIBORobotSurface2,SyntheticControl,ToeSegmentation1,TwoLeadECG,UMD,Wine
-ExperimentRounds = 3
-BaseConfig = None
+[INCLUDE]
+Include = Experiments/SuiteConfigs/BaseConfigs/BaseFull.ini
 
-GenerateGraphs = True
-GenerateAccuracyGraphs = True
-GenerateClassAccuracyGraph = True
-GenerateExperimentGraph = True
-GenerateClassGraphs = True
-GenerateShapeletGraphs = True
-GenerateOriginalSourceGraph = True
-GenerateAugmentedSourceGraph = True
-GenerateCandidatesGraph = False
-GenerateRejectsGraph = False
+[SUITEOPTIONS]
+ExperimentsToRun = ArrowHead,BME,CBF,Chinatown,ECG200,GunPoint,GunPointAgeSpan,GunPointOldVersusYoung,ItalyPowerDemand,MoteStrain,Plane,SonyAIBORobotSurface1,SonyAIBORobotSurface2,SyntheticControl,ToeSegmentation1,TwoLeadECG,UMD,Wine
 
 ComparisonData = ../ComparisonData/6shot.csv
-
-DebugMode = False
-
-ZipDataset = True
-CopyConfigs = True
-
-ForceRemakeDataset = True
