Refactoring of base configs

--- a/P8/Experiments/Configs/BaseConfigs/8ShotProtonetFull.ini
+++ b/P8/Experiments/Configs/BaseConfigs/8ShotProtonetFull.ini
@@ -1,6 +1,8 @@
+[INCLUDE]
+Include1 = Experiments/Configs/BaseConfigs/BaseProtonet.ini
+Include2 = Experiments/Configs/BaseConfigs/8Shot.ini
+
 [DATACONVERTER]
-UseConverter = ShapeletHistogramConverter
-TestClassesSplit = 8
 featureCount = 64
 maxWindowSize = 64
 attributes = minDist
@@ -10,9 +12,3 @@ purgeOddData = False
 [NETTRAINER]
 train_epochs = 5
 test_epochs = 5
-dataset_name = UCR
-trainer_name = ProtoNetTrainer
-num_query_tr = 1
-num_support_tr = 7
-num_query_test = 1
-num_support_test = 7
