--- a/P8/Experiments/Configs/BaseConfigs/6ShotKNNFast.ini
+++ b/P8/Experiments/Configs/BaseConfigs/6ShotKNNFast.ini
@@ -1,18 +1,10 @@
+[INCLUDE]
+Include1 = Experiments/Configs/BaseConfigs/BaseKNN.ini
+Include2 = Experiments/Configs/BaseConfigs/6Shot.ini
+
 [DATACONVERTER]
-UseConverter = ShapeletHistogramConverter
-TestClassesSplit = 6
 featureCount = 32
 maxWindowSize = 16
 attributes = minDist
 smoothingDegree = 1
 purgeOddData = False
-
-[NETTRAINER]
-train_epochs = 1
-test_epochs = 1
-dataset_name = UCR
-trainer_name = NaiveKNN
-num_query_tr = 1
-num_support_tr = 5
-num_query_test = 1
-num_support_test = 5
