--- a/P8/Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
+++ b/P8/Experiments/Configs/BaseConfigs/6ShotProtonetFast.ini
@@ -1,6 +1,8 @@
+[INC[INCLUDE]
+Include1 = Experiments/Configs/BaseConfigs/BaseProtonet.ini
+Include2 = Experiments/Configs/BaseConfigs/6Shot.ini
+
 [DATACONVERTER]
-UseConverter = ShapeletHistogramConverter
-TestClassesSplit = 6
 featureCount = 32
 maxWindowSize = 16
 attributes = minDist
@@ -10,9 +12,3 @@ purgeOddData = False
 [NETTRAINER]
 train_epochs = 1
 test_epochs = 1
-dataset_name = UCR
-trainer_name = ProtoNetTrainer
-num_query_tr = 1
-num_support_tr = 5
-num_query_test = 1
-num_support_test = 5
