--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFull.ini
@@ -2,5 +2,5 @@
 Include = Experiments/SuiteConfigs/BaseConfigs/6ShotFull.ini
 
 [SUITEOPTIONS]
-ExperimentName = Ours (6 shot - ProtoNet - Full)
+ExperimentName = Ours (6 shot - ProtoNet - Full - 64 Features)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFull.ini
