--- a/P8/Experiments/SuiteConfigs/8ShotProtonetFull.ini
+++ b/P8/Experiments/SuiteConfigs/8ShotProtonetFull.ini
@@ -2,5 +2,5 @@
 Include = Experiments/SuiteConfigs/BaseConfigs/8ShotFull.ini
 
 [SUITEOPTIONS]
-ExperimentName = Ours (8 shot - ProtoNet - Full)
+ExperimentName = Ours (8 shot - ProtoNet - Full - 64 Features)
 BaseConfig = Experiments/Configs/BaseConfigs/8ShotProtonetFull.ini
