* Updated configs to use the maximum possible window size * Fixed a bug in the Feature Extractor, that crashed when `maxWindowSize` was 0

--- a/P8/Experiments/Configs/BaseConfigs/5Shot.ini
+++ b/P8/Experiments/Configs/BaseConfigs/5Shot.ini
@@ -1,6 +1,8 @@
 [DATACONVERTER]
 UseConverter = ShapeletHistogramConverter
 TestClassesSplit = 5
+minWindowSize = 2
+maxWindowSize = 0
 
 [NETTRAINER]
 num_query_tr = 1
