Moved some files

--- a/P8/Experiments/Configs/BaseConfigs/8Shot.ini
+++ b/P8/Experiments/Configs/BaseConfigs/8Shot.ini
@@ -3,6 +3,8 @@ UseConverter = ShapeletHistogramConverter
 TestClassesSplit = 8
 minWindowSize = 2
 maxWindowSize = 0
+minSampleSize = 0
+maxSampleSize = 0
 
 [NETTRAINER]
 num_query_tr = 1
