Generating a few less graphs for the feature count tests

--- a/P8/Experiments/SuiteConfigs/FeatureCountTests/6ShotProtonetFull16Features.ini
+++ b/P8/Experiments/SuiteConfigs/FeatureCountTests/6ShotProtonetFull16Features.ini
@@ -1,5 +1,6 @@
 [INCLUDE]
-Include = Experiments/SuiteConfigs/BaseConfigs/6ShotFull.ini
+Include1 = Experiments/SuiteConfigs/BaseConfigs/6ShotFull.ini
+Include2 = Experiments/SuiteConfigs/FeatureCountTests/FeatureCountBase.ini
 
 [SUITEOPTIONS]
 ExperimentName = Ours (6 shot - ProtoNet - Full - 16 Features)
