--- a/P8/Experiments/SuiteConfigs/FeatureCountTests/8ShotProtonetFull8Features.ini
+++ b/P8/Experiments/SuiteConfigs/FeatureCountTests/8ShotProtonetFull8Features.ini
@@ -1,5 +1,6 @@
 [INCLUDE]
-Include = Experiments/SuiteConfigs/BaseConfigs/8ShotFull.ini
+Include1 = Experiments/SuiteConfigs/BaseConfigs/8ShotFull.ini
+Include2 = Experiments/SuiteConfigs/FeatureCountTests/FeatureCountBase.ini
 
 [SUITEOPTIONS]
 ExperimentName = Ours (8 shot - ProtoNet - Full - 8 Features)
